Fixing distort content

--- a/css/theme.css
+++ b/css/theme.css
@@ -4,7 +4,7 @@
     width: 100%;
     background-color: #f0f2f2;
     transition: all 2s ease;
-    z-index: 1;
+    z-index: 10000;
 }
 
 .preloader {
@@ -52,7 +52,12 @@
 @media screen and ( max-width: 1280px) {
     .preloader {
         top: 55%;
+}
+
+@media screen and ( max-width: 1024px) {
+    .preloader {
         left: 50%;
+    }
 }
 
 @media screen and ( max-width: 970px) and (max-height: 490px) {
